--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Compiler files
 cache/
 out/
+zkout/
 
 # Ignores development broadcast logs
 !/broadcast
@@ -12,3 +13,9 @@ docs/
 
 # Dotenv file
 .env
+
+# Mnemonic file
+.mnemonic
+
+# VS Code
+.vscode/
